# plycast

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: pypi-publish.yml
docs/: CLI.md  QuickStart.md  Voices.md
examples/: README.md  convert_minimal.py  vi_to_en_parler_laura.py  vi_tts_system_say_linh.py
examples/input/: nhat-ky-nu-phap-y-c1.txt
plycast/: __init__.py  cli.py  models.py  pipeline.py  text.py
plycast/models/: __init__.py  results.py
plycast/pipelines/: __init__.py  composed.py
plycast/providers/: __init__.py  base.py  http.py  libretranslate.py  llm.py  mock.py
plycast/providers/anthropic/: client.py  translator.py
plycast/providers/libretranslate/: __init__.py  client.py
plycast/providers/openai/: auth.py  client.py  translator.py
plycast/providers/tts/: __init__.py  convert.py  espeak.py  parler.py  system_say.py  text_file.py
plycast/services/: __init__.py  audio.py  read_text.py  translate.py
scripts/: smoke_test.py
src/plycast/: __init__.py
src/plycast/cli/: __init__.py  __main__.py  main.py
src/plycast/core/: __init__.py  models.py
src/plycast/engines/: __init__.py
src/plycast/engines/audio/: __init__.py
src/plycast/engines/translate/: __init__.py  base.py  service.py
src/plycast/engines/translate/providers/: __init__.py  identity.py  llm.py  translation_prompt.py
src/plycast/engines/translate/providers/anthropic/: __init__.py  auth.py  client.py  translator.py
src/plycast/engines/translate/providers/libretranslate/: client.py  translator.py
src/plycast/engines/translate/providers/openai/: __init__.py  client.py  translator.py
src/plycast/engines/tts/: __init__.py  base.py  service.py
src/plycast/engines/tts/providers/: __init__.py  espeak.py  parler.py  parler_voices.py  system_say.py
src/plycast/engines/tts/providers/seeds/: parler_voices.json
src/plycast/io/: __init__.py  read_text.py
src/plycast/io/loaders/: __init__.py  docx.py  image.py  pdf.py  txt.py
src/plycast/pipeline/: __init__.py  composed.py  convert.py  facade.py  wiring.py
src/plycast/preprocess/: __init__.py  chunking.py
tests/: __init__.py  test_parler_chunks.py  test_parler_voices.py  test_pipelines.py  test_text_chunk.py  test_translators_llm.py
