[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latoi-multicast"
version = "0.1.0"
description = "Library to ingest long-form text, translate it, and synthesize audio."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "latoi-multicast contributors" }
]
keywords = ["translation", "tts", "audiobook", "library"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
latoi-multicast = "plycast.cli:main"
plycast = "plycast.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["plycast*"]
