[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plycast"
version = "0.1.0"
description = "Ingest text (txt/md/pdf/docx/images), translate, and synthesize audio."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pillow>=10.0",
  "pytesseract>=0.3.10",
]
authors = [
  { name = "plycast contributors" }
]
keywords = ["translation", "tts", "audiobook", "library"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
# Replace with your real GitHub (or other) URLs before publishing.
Documentation = "https://github.com/latoi-hub/plycast#readme"
Repository = "https://github.com/latoi-hub/plycast"

[project.optional-dependencies]
docs = ["pypdf>=4.0", "python-docx>=1.0"]
full = ["pypdf>=4.0", "python-docx>=1.0"]
parler = [
  "numpy>=1.24",
  "soundfile>=0.12",
  "torch>=2.1.0",
  "transformers>=4.41.0",
  "parler-tts @ git+https://github.com/huggingface/parler-tts.git",
]
dev = ["pytest>=8.0"]

[project.scripts]
plycast = "plycast.cli:main"
latoi-multicast = "plycast.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["plycast*"]

[tool.setuptools.package-data]
plycast = ["providers/tts/seeds/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
